--- a/phoneguard/Base.lproj/Main.storyboard
+++ b/phoneguard/Base.lproj/Main.storyboard
@@ -14,15 +14,17 @@
     <customFonts key="customFonts">
         <array key="PingFang.ttc">
             <string>PingFangSC-Medium</string>
+            <string>PingFangSC-Regular</string>
+            <string>PingFangSC-Semibold</string>
             <string>PingFangSC-Thin</string>
         </array>
     </customFonts>
     <scenes>
-        <!--场景-->
+        <!--常用场景-->
         <scene sceneID="w7A-wU-hX4">
             <objects>
                 <navigationController id="mpx-Yf-kD1" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="场景" id="hb5-23-QcC"/>
+                    <tabBarItem key="tabBarItem" title="常用场景" image="pocket.png" id="hb5-23-QcC"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mKy-gw-X0b">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -64,7 +66,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.20299968123435974" green="0.68646222352981567" blue="0.59982043504714966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.20392156862745098" green="0.68627450980392157" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="orf-UL-mMx" firstAttribute="centerX" secondItem="fjP-v6-NYa" secondAttribute="centerX" id="3FM-R7-Sc7"/>
                                     <constraint firstItem="orf-UL-mMx" firstAttribute="leading" secondItem="fjP-v6-NYa" secondAttribute="leading" constant="97" id="bcI-Ex-laa"/>
@@ -326,6 +328,38 @@
             </objects>
             <point key="canvasLocation" x="-2146.4000000000001" y="425.93703148425789"/>
         </scene>
+        <!--Secured View Controller-->
+        <scene sceneID="EjG-ZT-BHF">
+            <objects>
+                <viewController storyboardIdentifier="secured" id="hPw-3Y-7UF" customClass="SecuredViewController" customModule="phoneguard" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="B0U-vT-v57"/>
+                        <viewControllerLayoutGuide type="bottom" id="fUe-Ph-SlL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="j9o-3Y-Pm2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vY-cu-OuH">
+                                <rect key="frame" x="67" y="241" width="253" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">警戒模式已开启。                                                                                                  请不要锁屏，将手机放置于包或口袋内，系统会自动关闭屏幕。</string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <connections>
+                        <outlet property="securedText" destination="6vY-cu-OuH" id="dGa-a6-IoN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jgq-i4-cXL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-748" y="-331.48425787106447"/>
+        </scene>
         <!--Lock Screen View Controller-->
         <scene sceneID="KNq-qT-dnX">
             <objects>
@@ -370,7 +404,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aeE-5s-rDH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-694" y="-331"/>
+            <point key="canvasLocation" x="-121" y="-331"/>
         </scene>
         <!--Guide View Controller-->
         <scene sceneID="Ja3-yE-1k6">
@@ -1616,7 +1650,7 @@ Cg
         <scene sceneID="pAb-BZ-xf9">
             <objects>
                 <navigationController id="vDZ-Hz-ntU" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="设置" id="UTQ-xv-zx2"/>
+                    <tabBarItem key="tabBarItem" title="设置" image="settings.png" selectedImage="sel-settings.png" id="UTQ-xv-zx2"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="K5m-A0-gXy">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1633,7 +1667,7 @@ Cg
         <scene sceneID="rzy-BQ-Z2L">
             <objects>
                 <navigationController id="CUM-rS-YUL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="实用工具" id="NJZ-FV-9OO"/>
+                    <tabBarItem key="tabBarItem" title="实用工具" image="toolbox.png" id="NJZ-FV-9OO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FU2-25-r2N">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1645,6 +1679,23 @@ Cg
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nFF-k6-LdI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3489" y="762"/>
+        </scene>
+        <!--其它场景-->
+        <scene sceneID="ne8-VG-3mx">
+            <objects>
+                <navigationController id="Z0M-br-05u" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="其它场景" image="model-lib.png" id="H3E-zM-Qgk"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fRV-MF-eib">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="36i-tY-x6G" kind="relationship" relationship="rootViewController" id="iZq-Py-eIg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BXo-KL-YUQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3908" y="275"/>
         </scene>
         <!--实用小工具-->
         <scene sceneID="Avr-Df-tmm">
@@ -1730,6 +1781,72 @@ Cg
                 <placeholder placeholderIdentifier="IBFirstResponder" id="abA-wV-NNg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2146" y="1098"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="D1g-g4-aZl">
+            <objects>
+                <viewController id="36i-tY-x6G" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="S1B-rf-qeF"/>
+                        <viewControllerLayoutGuide type="bottom" id="1UR-6z-Oh0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qna-Nb-ay4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="静止模式" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xb-bg-7i9">
+                                <rect key="frame" x="92" y="134" width="125" height="50"/>
+                                <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Ebf-bT-tq2">
+                                <rect key="frame" x="298" y="144" width="49" height="31"/>
+                            </switch>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UTQ-tA-LK2">
+                                <rect key="frame" x="298" y="239" width="49" height="31"/>
+                            </switch>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="charging.png" translatesAutoresizingMaskIntoConstraints="NO" id="FpC-ys-hwD">
+                                <rect key="frame" x="38" y="238" width="32" height="32"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stillness.png" translatesAutoresizingMaskIntoConstraints="NO" id="1Na-Ub-Wfc">
+                                <rect key="frame" x="38" y="143" width="32" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="Q0i-Fa-gTE"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="充电模式" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YaA-E3-EHB">
+                                <rect key="frame" x="92" y="229" width="125" height="50"/>
+                                <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ebf-bT-tq2" firstAttribute="leading" secondItem="UTQ-tA-LK2" secondAttribute="leading" id="0bi-a6-hbz"/>
+                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="centerY" secondItem="4xb-bg-7i9" secondAttribute="centerY" id="1VU-TE-jqF"/>
+                            <constraint firstItem="4xb-bg-7i9" firstAttribute="trailing" secondItem="YaA-E3-EHB" secondAttribute="trailing" id="4Vc-iX-Xta"/>
+                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="leading" secondItem="FpC-ys-hwD" secondAttribute="leading" id="9EW-ne-WEs"/>
+                            <constraint firstItem="4xb-bg-7i9" firstAttribute="leading" secondItem="YaA-E3-EHB" secondAttribute="leading" id="Frk-9T-Cg5"/>
+                            <constraint firstItem="FpC-ys-hwD" firstAttribute="bottom" secondItem="UTQ-tA-LK2" secondAttribute="bottom" id="GMV-yz-JBw"/>
+                            <constraint firstItem="4xb-bg-7i9" firstAttribute="top" secondItem="S1B-rf-qeF" secondAttribute="bottom" constant="70" id="LU3-Kj-urF"/>
+                            <constraint firstItem="FpC-ys-hwD" firstAttribute="top" secondItem="1Na-Ub-Wfc" secondAttribute="bottom" constant="63" id="Rf0-Mo-wGF"/>
+                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="bottom" secondItem="Ebf-bT-tq2" secondAttribute="bottom" id="Vlz-dq-OGq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ebf-bT-tq2" secondAttribute="trailing" constant="12" id="dlI-TE-wxG"/>
+                            <constraint firstItem="Ebf-bT-tq2" firstAttribute="leading" secondItem="4xb-bg-7i9" secondAttribute="trailing" constant="81" id="eh8-Ll-UmD"/>
+                            <constraint firstItem="YaA-E3-EHB" firstAttribute="top" secondItem="4xb-bg-7i9" secondAttribute="bottom" constant="45" id="ho6-9o-W5H"/>
+                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="top" secondItem="S1B-rf-qeF" secondAttribute="bottom" constant="79" id="iCF-3Y-WPj"/>
+                            <constraint firstItem="4xb-bg-7i9" firstAttribute="leading" secondItem="1Na-Ub-Wfc" secondAttribute="trailing" constant="22" id="oh5-V0-2sg"/>
+                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="leading" secondItem="qna-Nb-ay4" secondAttribute="leadingMargin" constant="22" id="qDT-YL-M8L"/>
+                            <constraint firstItem="FpC-ys-hwD" firstAttribute="centerY" secondItem="YaA-E3-EHB" secondAttribute="centerY" id="wSx-qg-Whb"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="DCB-Yh-Ev8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Br-eR-rIn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4657" y="385"/>
         </scene>
         <!--License View Controller-->
         <scene sceneID="CBt-BS-fh3">
@@ -2075,7 +2192,7 @@ Cg
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1jt-8f-cnO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="14" y="-331"/>
+            <point key="canvasLocation" x="540" y="-331"/>
         </scene>
         <!--分贝仪 噪音测量-->
         <scene sceneID="C29-kI-4Dj">
@@ -2200,13 +2317,15 @@ Cg
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="vuC-vj-aDs" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eOk-1l-9vA">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="mpx-Yf-kD1" kind="relationship" relationship="viewControllers" id="tjJ-s8-uXA"/>
-                        <segue destination="vDZ-Hz-ntU" kind="relationship" relationship="viewControllers" id="vf6-hB-uKO"/>
-                        <segue destination="CUM-rS-YUL" kind="relationship" relationship="viewControllers" id="nSa-OL-EjC"/>
+                        <segue destination="Z0M-br-05u" kind="relationship" relationship="viewControllers" id="hu1-Wm-MFY"/>
+                        <segue destination="vDZ-Hz-ntU" kind="relationship" relationship="viewControllers" id="0Of-5G-skh"/>
+                        <segue destination="CUM-rS-YUL" kind="relationship" relationship="viewControllers" id="fUm-bl-F3f"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qb7-6b-MOA" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2214,4 +2333,13 @@ Cg
             <point key="canvasLocation" x="-2956" y="-331"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="charging.png" width="32" height="32"/>
+        <image name="model-lib.png" width="24" height="24"/>
+        <image name="pocket.png" width="24" height="24"/>
+        <image name="sel-settings.png" width="24" height="24"/>
+        <image name="settings.png" width="24" height="24"/>
+        <image name="stillness.png" width="32" height="32"/>
+        <image name="toolbox.png" width="24" height="24"/>
+    </resources>
 </document>
