--- a/phoneguard/Base.lproj/LaunchScreen.storyboard
+++ b/phoneguard/Base.lproj/LaunchScreen.storyboard
@@ -19,8 +19,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WoD-fA-B5j">
+                                <rect key="frame" x="85" y="617" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="WoD-fA-B5j" secondAttribute="height" multiplier="1:1" id="ilf-uR-c8j"/>
+                                    <constraint firstAttribute="width" constant="30" id="xPJ-gX-kdv"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="icon.png"/>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kq5-Zk-HTc">
-                                <rect key="frame" x="108" y="558" width="211" height="30"/>
+                                <rect key="frame" x="110" y="617" width="211" height="30"/>
                                 <attributedString key="attributedText">
                                     <fragment content="您身边的手机防盗窃专家">
                                         <attributes>
@@ -31,23 +39,15 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WoD-fA-B5j">
-                                <rect key="frame" x="70" y="558" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="WoD-fA-B5j" secondAttribute="height" multiplier="1:1" id="J0r-ch-WcH"/>
-                                    <constraint firstAttribute="height" constant="30" id="djM-lD-PIL"/>
-                                </constraints>
-                                <state key="normal" backgroundImage="icon.png"/>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="WoD-fA-B5j" firstAttribute="top" secondItem="Kq5-Zk-HTc" secondAttribute="top" id="JHe-KW-krU"/>
-                            <constraint firstItem="Kq5-Zk-HTc" firstAttribute="leading" secondItem="WoD-fA-B5j" secondAttribute="trailing" constant="8" symbolic="YES" id="KoE-Mm-bZF"/>
-                            <constraint firstItem="WoD-fA-B5j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="MgM-Ep-8l5"/>
-                            <constraint firstItem="WoD-fA-B5j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="538" id="Ps7-up-Ggl"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Kq5-Zk-HTc" secondAttribute="trailing" constant="56" id="dTz-mS-EET"/>
-                            <constraint firstItem="WoD-fA-B5j" firstAttribute="bottom" secondItem="Kq5-Zk-HTc" secondAttribute="bottom" id="syE-ba-BSA"/>
+                            <constraint firstItem="WoD-fA-B5j" firstAttribute="bottom" secondItem="Kq5-Zk-HTc" secondAttribute="bottom" id="6Pb-xK-Wku"/>
+                            <constraint firstItem="WoD-fA-B5j" firstAttribute="top" secondItem="Kq5-Zk-HTc" secondAttribute="top" id="8PA-F9-R8j"/>
+                            <constraint firstItem="WoD-fA-B5j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="IKR-cH-bCy"/>
+                            <constraint firstAttribute="bottom" secondItem="WoD-fA-B5j" secondAttribute="bottom" constant="20" symbolic="YES" id="NN9-sl-6Rn"/>
+                            <constraint firstItem="Kq5-Zk-HTc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="110" id="TSi-Ty-rld"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Kq5-Zk-HTc" secondAttribute="trailing" constant="54" id="Zj8-TR-h5U"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
